--- a/index.html
+++ b/index.html
@@ -201,6 +201,16 @@
                     Malayalam <span class="native-name">(മലയാളം)</span>
                 </a>
             </li>
+            <li class="language-card">
+                <a href="gujarati-k.html">
+                    Gujarati <span class="native-name">(ગુજરાતી)</span>
+                </a>
+            </li>
+            <li class="language-card">
+                <a href="panjabi-k.html">
+                    Panjabi <span class="native-name">(ਪੰਜਾਬੀ)</span>
+                </a>
+            </li>
             <!-- Add more languages here as needed -->
         </ul>
     </div>
